<resources>
    <string name="app_name">日程助手</string>
    <string name="start_activity">start Activity</string>
    <string name="start_activity_for_result">Start Activity for Result</string>
    <string name="activity2_result_todo">Activity2 Result: //TODO:</string>
    <string name="start_static_fragment_activity">Start Static Fragment Activity</string>
    <string name="start_dynamic_fragment_activity">Start Dynamic Fragment Activity</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="send_broadcast_static">Send Broadcast(static)</string>
    <string name="send_broadcast_dynamic">Send Broadcast(dynamic)</string>
    <string name="welcome_to_mainactivity2">Welcome to MainActivity2</string>
    <string name="Return">Return</string>
    <string name="welcome_to_mainactivity3">Welcome to MainActivity3</string>
    <string name="static_fragment_activity">Static Fragment Activity</string>
    <string name="myfragment_start">MyFragment Start</string>
    <string name="myfragment_end">MyFragment End</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="Sunday">日</string>
    <string name="Monday">一</string>
    <string name="Tuesday">二</string>
    <string name="Wednesday">三</string>
    <string name="Thursday">四</string>
    <string name="Friday">五</string>
    <string name="Saturday">六</string>
    <string name="add_event">Add Event</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="day">日</string>
    <string name="today_item">今日日程</string>
</resources>